[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cutscene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Cutscene" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]

[node name="CharacterImage" type="Sprite" parent="."]
position = Vector2( 49, 417 )

[node name="DialogueBox" type="Sprite" parent="."]

[node name="NameBox" type="Sprite" parent="."]

[node name="DialogueBG" type="ColorRect" parent="."]
margin_top = 400.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.14902, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBG" type="ColorRect" parent="."]
margin_left = 60.0
margin_top = 370.0
margin_right = 280.0
margin_bottom = 430.0
color = Color( 0.407843, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="Label" parent="."]
margin_left = 49.0
margin_top = 434.0
margin_right = 1247.0
margin_bottom = 673.0
custom_fonts/font = SubResource( 1 )
text = "onche onche kom c tryst"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="Label" parent="."]
margin_left = 75.0
margin_top = 375.0
margin_right = 295.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 2 )
text = "Nom Place Au le deur"
__meta__ = {
"_edit_use_anchors_": false
}
